1.2.0: update to MC 1.18 and java 17 + rewrite, add 'all' to tabcompleter