@@ -5,33 +5,37 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
+import static de.maddin.multiweather.Constants.ALL_ARG;
 
 /**
  * This utils class handles all world related tasks.
  */
-public class WorldUtils {
+public final class WorldUtils {
 
     private WorldUtils() {
     }
 
-    public static World getWorldOfSender(CommandSender sender) {
-        if (sender instanceof Player) {
-            var player = (Player) sender;
+    public static World getWorldOfSender(final CommandSender sender) {
+        if (sender instanceof Player player) {
             return player.getWorld();
         }
         return null;
     }
 
-    public static List<World> getAllWorlds(CommandSender sender) {
+    public static List<World> getAllWorlds(final CommandSender sender) {
         return sender.getServer().getWorlds();
     }
 
-    public static List<String> getAllWorldsAsStringsStartingWith(CommandSender sender, String arg) {
-        return getAllWorlds(sender)
+    public static List<String> getAllWorldsAsStringsStartingWith(
+            final CommandSender sender, final String arg) {
+        Stream<String> all = Stream.of(ALL_ARG);
+        Stream<String> worlds = getAllWorlds(sender)
                 .stream()
-                .map(World::getName)
+                .map(World::getName);
+        return Stream.concat(all, worlds)
                 .filter(name -> name.regionMatches(true, 0, arg, 0, arg.length()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
